added media query and  stlying to boxes

--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
 <body>
     <div id="container">
+        <div id="columns">
+            <div id="column-1" class="box">
 
-        <div id="column-1" class="box">
+            </div>
 
+            <div id="column-2" class="box">
+
+            </div>
+
+            <div id="column-3" class="hidden">
+
+            </div>
+            
+            <div id="column-4" class="hidden">
+
+            </div>
         </div>
-
-        <div id="column-2" class="box">
-
-        </div>
-
-        <div id="column-3" class="box">
-
-        </div>
-        
-        <div id="column-4" class="box">
-
-        </div>
-
     </div>
 </body>
 
